# constellation-agents

./: README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  config.py  crypto_bot.py  file_transfer.py
agents/calendar_nlp/: __init__.py  __main__.py
agents/calendar_sync/: __init__.py  __main__.py
agents/crypto_bot/: Dockerfile  __init__.py  __main__.py
agents/decision_service/: __init__.py
agents/eureka_watcher/: Dockerfile  __init__.py
agents/explainability_agent/: __init__.py
agents/finance_advisor/: Dockerfile  __init__.py
agents/finrl_strategist/: Dockerfile  __init__.py  __main__.py
agents/payments/: __init__.py  database.py  processor.py  stripe.py
agents/plaid_sync/: __init__.py  __main__.py
agents/sdk/: __init__.py  base.py
ccxt/: __init__.py
tests/: test_calendar_nlp.py  test_calendar_sync.py  test_calendar_sync_entrypoint.py  test_config.py  test_crypto_bot.py  test_decision_service.py  test_entrypoints.py  test_eureka_watcher.py  test_explainability_agent.py  test_file_transfer.py  test_finance_advisor.py  test_finance_advisor_entrypoint.py  test_finrl_strategist.py  test_payments.py  test_plaid_sync.py  test_sdk.py
