[project]
name = "constellation-agents"
version = "0.1.0"
description = "Workspace for constellation agents"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
kafka-python = "*"
requests = "*"
prometheus-client = "*"
PyYAML = "*"
ccxt = "*"
freqtrade = {version = "*", optional = true}

[tool.poetry.workspace]
packages = [
    {include = "agents"},
]

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
crypto-bot = "agents.crypto_bot.__main__:main"
finrl-strategist = "agents.finrl_strategist.__main__:main"
eureka-watcher = "agents.eureka_watcher.__main__:main"

[tool.poetry.extras]
freqtrade = ["freqtrade"]
